2006-06-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_debug/Makefile.am: Include Make.xml.rules.
	* modules/pam_debug/pam_debug.8.xml: New.
	* modules/pam_debug/pam_debug.8: New, generated from xml file.
	* modules/pam_debug/README.xml: New.
	* modules/pam_debug/README: Regenerated from xml file.

	* examples/vpass.c: UID is unsigned on Linux.
	* modules/pam_exec/pam_exec.c: Likewise.
	* modules/pam_unix/pam_unix_acct.c: Likewise.
	* modules/pam_unix/pam_unix_sess.c: Likewise.

	* modules/pam_succeed_if/pam_succeed_if.8.xml: Fix syntax error.
	* modules/pam_succeed_if/pam_succeed_if.8: Regenerated.
	* modules/pam_succeed_if/README: Regenerated.

	* modules/pam_limits/Makefile.am: Include Make.xml.rules.
	* modules/pam_limits/limits.conf.5: New, generated from xml file.
	* modules/pam_limits/limits.conf.5.xml: New.
	* modules/pam_limits/pam_limits.8: New, generated from xml file.
	* modules/pam_limits/pam_limits.8.xml: New.
	* modules/pam_limits/README.xml: New.
	* modules/pam_limits/README: Regenerated from README.xml.

2006-06-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix_passwd.c (save_old_password): UIDs
	are unsigned on Linux, don't truncate them.
	(_do_setpass): err is of type clnt_stat, not int.

	* modules/pam_lastlog/pam_lastlog.c (last_login_read): Don't
	truncate UID for syslog output.

	* modules/pam_time/pam_time.c: Replace type boolean with int.
	* modules/pam_group/pam_group.c: Likewise.

2006-06-15  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/bigcrypt.h: New.
	* modules/pam_unix/Makefile.am: Add bigcrypt.h.
	* modules/pam_unix/bigcrypt.c: Include bigcrypt.h.
	* modules/pam_unix/support.c: Include bigcrypt.h, remove
	own prototype.
	* modules/pam_unix/bigcrypt_main.c: Include bigcrypt.h, remove
	own prototype.
	* modules/pam_unix/pam_unix_passwd.c: Include bigcrypt.h, remove
	own prototype.

	* modules/pam_time/pam_time.c (logic_member): Remove unused
	variable len.
