@@ -1,14 +1,15 @@
 #
-# Copyright (c) 2005, 2006 Thorsten Kukuk <kukuk@suse.de>
+# Copyright (c) 2005, 2006 Thorsten Kukuk <kukuk@thkukuk.de>
 #
 
 CLEANFILES = *~
 
-EXTRA_DIST = README ${MANS} pam_selinux_check.8 tst-pam_selinux
+EXTRA_DIST = README ${MANS} $(XMLS) pam_selinux_check.8 tst-pam_selinux
 
 if HAVE_LIBSELINUX
   TESTS = tst-pam_selinux
   man_MANS = pam_selinux.8 
+  XMLS = README.xml pam_selinux.8.xml
 endif
 
 securelibdir = $(SECUREDIR)
@@ -30,3 +31,9 @@ if HAVE_LIBSELINUX
   securelib_LTLIBRARIES = pam_selinux.la
   noinst_PROGRAMS = pam_selinux_check
 endif
+if ENABLE_REGENERATE_MAN
+noinst_DATA = README pam_selinux.8
+README: pam_selinux.8.xml
+-include $(top_srcdir)/Make.xml.rules
+endif
+
