@@ -1,6 +1,6 @@
 .TH pam_selinux_check 8 2002/05/23 "Red Hat Linux" "System Administrator's Manual"
 .SH NAME
-pam_selinux_check \- login program to test pam_selinux_check
+pam_selinux_check \- login program to test pam_selinux.so
 .SH SYNOPSIS
 .B pam_selinux_check [user]
 .br
