@@ -1,3 +1,11 @@
+2006-06-18  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* modules/pam_selinux/Makefile.am: Include Make.xml.rules.
+	* modules/pam_selinux/pam_selinux.8.xml: New.
+	* modules/pam_selinux/pam_selinux.8: Regenerated from xml file.
+	* modules/pam_selinux/README.xml: New.
+	* modules/pam_selinux/README: Regenerated from xml file.
+
 2006-06-17  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* modules/pam_debug/Makefile.am: Include Make.xml.rules.
